fix: hide scrollbar + html fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -209,6 +209,10 @@ header {
     margin-top: 44px;
     padding-top: 20px;
 }
+.menu-add {
+    height: 710px;
+    overflow: hidden;
+}
 .menu-header {
     display: flex;
     align-items: center;
@@ -552,6 +556,8 @@ header {
     .menu-grid.scroll {
         grid-template-columns: repeat(3, 380px);
         overflow-x: scroll;
+        overflow-y: hidden;
+        padding-bottom: 30px;
     }
     .footer-box {
         flex-wrap: wrap;
